--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="h-full bg-gray-100">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -31,7 +31,6 @@
                 <div class="ml-4 flex items-center md:ml-6">
                   <button type="button" class="rounded-full bg-gray-800 p-1 text-gray-400 hover:text-white focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-800">
                     <span class="sr-only">View on Github</span>
-
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" stroke-width="1.5" fill="currentColor" aria-hidden="true" width="24" height="24" viewBox="0 0 24 24">
                         <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
                     </svg>
@@ -99,9 +98,10 @@
                     <div class="grid grid-cols-1 gap-4 lg:col-span-2">
                       <section aria-labelledby="section-1-title">
                         <h2 class="sr-only" id="section-1-title">Section title</h2>
-                        <div class="rounded-lg bg-gray-800 overflow-hidden shadow">
+                        <div class="rounded-lg bg-gray-800 overflow-hidden shadow w-full h-full">
                           <div class="p-6">
-                            <!-- Your content -->
+                            <div id="sirsim-container">
+                            </div>
                           </div>
                         </div>
                       </section>
@@ -185,6 +185,12 @@
         </main>
       </div> 
 
-      <script src="app.js"></script>
+    <script src="scripts/app.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.min.js"></script>
+    <script src="scripts/sirsim.js"></script>
+    <script src="scripts/graphp5.js"></script>
+    <script src="scripts/startsim.js"></script>
+    <script src="scripts/form.js"></script>
 </body>
 </html>
