--- a/index.html
+++ b/index.html
@@ -26,15 +26,17 @@
     <script src="https://cdn.tailwindcss.com"></script>
     
 </head>
-<body class=" bg-gray-700">
+<body class="bg-gray-700">
     <div class="">
         <nav class="bg-gray-800">
           <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
             <div class="flex h-16 items-center justify-between">
               <div class="flex items-center">
                 <div class="flex-shrink-0">
-                  <img class="h-8 w-8" src="images/virus.png" alt="Your Company">
+                  <img class="h-8 w-8" src="images/virus.png" alt="SIR Model">
                 </div>
+                &nbsp;&nbsp;&nbsp;&nbsp;
+                <h2 class="text-white text-lg font-medium">SIR Simulation</h2>
                 <div class="hidden md:block">
                   <div class="ml-10 flex items-baseline space-x-4">
                     <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
