--- a/index.html
+++ b/index.html
@@ -122,7 +122,6 @@
                           <div class="p-6">
                             <div id="sirsim-container">
                             </div>
-                          </div>
                         </div>
                       </section>
                     </div>
@@ -130,7 +129,7 @@
                     <!-- Right column -->
                     <div class="grid grid-cols-1 gap-4">
                       <section aria-labelledby="section-2-title">
-                        <h2 class="sr-only" id="section-2-title">Section title</h2>
+                        <h2 class="sr-only" id="section-2-title">Parameters</h2>
                         <div class="rounded-lg bg-gray-800 overflow-hidden shadow">
                           <div class="p-6">
                             <div class="sm:rounded-lg">
@@ -192,11 +191,22 @@
                                     </div> -->
                                 </form>
                                 </div>
+                                <br><br>
+                                <h3 class="text-lg leading-6 font-medium text-white">Graph Generated</h3> 
+                                <div class="mt-2 max-w-xl text-sm text-gray-400">
+                                  <p>The following graph show the curves of the <span class="text-yellow">susceptible</span>, <span class="text-red">infected</span>, and <span class="text-green">recovered</span> correspoding to the simulation.</p> 
+
+                                  </div>
                               </div>
+                              
+                          </div>
+                          
+                          <div id="graph-container">
                           </div>
                         </div>
                       </section>
                     </div>
+                  </div>
                   </div>
                 </div>
               </main>
